--- a/1_index.html
+++ b/1_index.html
@@ -9,12 +9,12 @@
 <body>
   <div class="banner">
     <a href="1_index.html">
-      <img alt="LOGO" height="150" src="1_Index_Inicio/img/Logo_1.png" />
-      <img alt="HARRY" height="150" src="1_Index_Inicio/img/Harry_Potter.png" />
+      <img class="logo" alt="LOGO" height="150" src="iconos-header/Logo-blanco.png" />
     </a>
   </div>
 
   <div class="navigation-menu">
+    <img class="logo" alt="Isologo-blanco" height="150" src="iconos-header/Isologo-blanco.png" />
     <a href="1_index.html">Inicio</a>
     <a href="2_Novedades.html">Novedades</a>
     <a href="3_Noticias.html">Noticias</a>
@@ -22,9 +22,13 @@
     <a href="5_Libros.html">Libros</a>
     <a href="6_JK_Rowling.html">J.k.Rowling</a>
     <a href="7_Tienda.html">Tienda</a>
-    <a href="8_Parque_Tematico.html">ParqueTemático</a>
-    <a href="9_Contacto.html">Contacto</a>
-    <a href="10_Otras_paginas.html">Otras</a>
+    <a href="8_Parque_Tematico.html">Parque Temático</a>
+
+    <div class="social-links">
+      <a href="#"><img alt="LOGO" src="iconos-redes/Facebook-01.png" /></a>
+      <a href="#"><img alt="LOGO" src="iconos-redes/Instagram-02.png" /></a>
+      <a href="#"><img alt="LOGO" src="iconos-redes/Twiter-03.png" /></a>
+    </div>
   </div>
 
 
@@ -52,10 +56,9 @@
     </div>
   </center>
   <br/>
-
+  <HR></HR>
+  <foot>El contenido fue recopilado de diferentes fuentes con el fin de compartir imagenes e información.</foot>
+  
+  <script src="sticky-header.js"></script>
 </body>
-
-<HR></HR>
-<foot>El contenido fue recopilado de diferentes fuentes con el fin de compartir imagenes e información.</foot>
-
 </html>
