Fixed content and fixed header jump

--- a/1_index.html
+++ b/1_index.html
@@ -25,40 +25,52 @@
     <a href="8_Parque_Tematico.html">Parque Temático</a>
 
     <div class="social-links">
-      <a href="#"><img alt="LOGO" src="iconos-redes/Facebook-01.png" /></a>
-      <a href="#"><img alt="LOGO" src="iconos-redes/Instagram-02.png" /></a>
-      <a href="#"><img alt="LOGO" src="iconos-redes/Twiter-03.png" /></a>
+      <a href="#">
+        <img alt="LOGO" class="facebook" src="iconos-redes/Facebook-01.png" />
+      </a>
+      <a href="#">
+        <img alt="LOGO" src="iconos-redes/Instagram-02.png" />
+      </a>
+      <a href="#">
+        <img alt="LOGO" src="iconos-redes/Twiter-03.png" />
+      </a>
     </div>
   </div>
 
+  <div class="content">
 
-  <center>
-    <h1>
-      <b>¿Erés fan de Harry Potter?
-        <br/>¡Entraste al lugar indicado!</b>
-    </h1>
-  </center>
 
-  <div class="texto_index">
     <center>
-      <p>Si sos fanático de esta mágica saga, te gustará mucho este sitio. Te contaremos detalles y secretos de esta grán producción,
-        las últimas noticias y novedades. Aquí podrás compartir información o lo que deses con nosotros y los demás fans
-        como vos.</p>
+      <h1>
+        <b>¿Erés fan de Harry Potter?
+          <br/>¡Entraste al lugar indicado!</b>
+      </h1>
+    </center>
+
+    <div class="texto_index">
+      <center>
+        <p>
+          Si sos fanático de esta mágica saga, te gustará mucho este sitio. Te contaremos detalles y secretos de esta grán
+          producción, las últimas noticias y novedades. Aquí podrás compartir información o lo que deses con nosotros y los
+          demás fans como vos.
+        </p>
+      </center>
+    </div>
+    <br/>
+
+    <div class="img"></div>
+
+    <center>
+      <div class="caj_foto_inicio">
+        <img alt="Harry atrapamdo cartas" height="500" src="1_Index_Inicio/img/harry_con_cartas.gif">
+      </div>
     </center>
   </div>
   <br/>
-
-  <div class="img"></div>
-
-  <center>
-    <div class="caj_foto_inicio">
-      <img alt="Harry atrapamdo cartas" height="500" src="1_Index_Inicio/img/harry_con_cartas.gif">
-    </div>
-  </center>
-  <br/>
   <HR></HR>
   <foot>El contenido fue recopilado de diferentes fuentes con el fin de compartir imagenes e información.</foot>
-  
+
   <script src="sticky-header.js"></script>
 </body>
+
 </html>
