--- a/1_index.html
+++ b/1_index.html
@@ -2,6 +2,7 @@
 
 <head>
   <link rel="stylesheet" href="estilo.css">
+  <link rel="stylesheet" href="1_Index.css">
   <meta charset="utf-8">
   <title>Fan Potter</title>
 </head>
@@ -58,11 +59,9 @@
     </div>
     <br/>
 
-    <div class="img"></div>
-
     <center>
       <div class="caj_foto_inicio">
-        <img alt="Harry atrapamdo cartas" height="500" src="1_Index_Inicio/img/harry_con_cartas.gif">
+        <img alt="Harry atrapamdo cartas" class="harry-image" src="1_Index_Inicio/img/harry_con_cartas.gif">
       </div>
     </center>
   </div>
