--- a/6_JK_Rowling.html
+++ b/6_JK_Rowling.html
@@ -4,35 +4,39 @@
   <link rel="stylesheet" href="estilo.css">
   <meta charset="utf-8">
   <title>Fan Potter</title>
-
-  <div class="banner">
-    <center>
-      <a href="1_index.html">
-        <img alt="LOGO" height="150" src="1_Index_Inicio/img/Logo_1.png" />
-        <img alt="HARRY" height="150" src="1_Index_Inicio/img/Harry_Potter.png" />
-      </a>
-    </center>
-  </div>
-
-  <div class="menu">
-    <center>
-      <a href="1_index.html">Inicio</a>
-      <a href="2_Novedades.html">Novedades</a>
-      <a href="3_Noticias.html">Noticias</a>
-      <a href="4_Actores.html">Actores</a>
-      <a href="5_Libros.html">Libros</a>
-      <a href="6_JK_Rowling.html">J.k.Rowling</a>
-      <a href="7_Tienda.html">Tienda</a>
-      <a href="8_Parque_Tematico.html">Parque Temático</a>
-      <a href="9_Contacto.html">Contacto</a>
-      <a href="10_Otras_paginas.html">Otras</a>
-    </center>
-  </div>
-
-
 </head>
 
 <body>
+
+  <div class="banner">
+    <a href="1_index.html">
+      <img class="logo" alt="LOGO" height="150" src="iconos-header/Logo-blanco.png" />
+    </a>
+  </div>
+
+  <div class="navigation-menu">
+    <img class="logo" alt="Isologo-blanco" height="150" src="iconos-header/Isologo-blanco.png" />
+    <a href="1_index.html">Inicio</a>
+    <a href="2_Novedades.html">Novedades</a>
+    <a href="3_Noticias.html">Noticias</a>
+    <a href="4_Actores.html">Actores</a>
+    <a href="5_Libros.html">Libros</a>
+    <a href="6_JK_Rowling.html">J.k.Rowling</a>
+    <a href="7_Tienda.html">Tienda</a>
+    <a href="8_Parque_Tematico.html">Parque Temático</a>
+
+    <div class="social-links">
+      <a href="#">
+        <img alt="LOGO" class="facebook" src="iconos-redes/Facebook-01.png" />
+      </a>
+      <a href="#">
+        <img alt="LOGO" src="iconos-redes/Instagram-02.png" />
+      </a>
+      <a href="#">
+        <img alt="LOGO" src="iconos-redes/Twiter-03.png" />
+      </a>
+    </div>
+  </div>
 
   <h1>
     <b>Joanne Rowling</b>
@@ -123,7 +127,8 @@
     páginas del libro en el Museo de Historia Natural, en Londres. Los libros de Harry Potter también han sido reconocidos
     por despertar interés en la lectura entre los jóvenes en una época en que prefieren utilizar su tiempo para ver televisión
     o navegar por Internet en lugar de leer, aunque el impacto de los libros en los hábitos de lectura de los niños han sido
-    cuestionados.</p>
+    cuestionados.
+  </p>
 
   <h2>
     <em>Películas de Harry Potter</em>
@@ -162,7 +167,8 @@
     por detrás del Universo cinematográfico de Marvel. Incluso los filmes Harry Potter y la piedra filosofal (2001), Harry
     Potter y el cáliz de fuego (2005) y Harry Potter y las Reliquias de la Muerte - Parte 2 (2011) fueron las películas más
     taquilleras en sus años de estreno siendo actualmente esta última una de los diez filmes con mayor recaudación en la
-    historia.</p>
+    historia.
+  </p>
 
 
 
@@ -180,8 +186,9 @@
   </center>
 
 
+  <HR></HR>
+  <foot>El contenido fue recopilado de diferentes fuentes con el fin de compartir imagenes e información.</foot>
+
 </body>
-<HR></HR>
-<foot>El contenido fue recopilado de diferentes fuentes con el fin de compartir imagenes e información.</foot>
 
 </html>
