--- a/7_Tienda.html
+++ b/7_Tienda.html
@@ -4,36 +4,39 @@
   <link rel="stylesheet" href="estilo.css">
   <meta charset="utf-8">
   <title>Fan Potter</title>
-
-  <div class="banner">
-    <center>
-      <a href="1_index.html">
-        <img alt="LOGO" height="150" src="1_Index_Inicio/img/Logo_1.png" />
-        <img alt="HARRY" height="150" src="1_Index_Inicio/img/Harry_Potter.png" />
-      </a>
-    </center>
-  </div>
-
-  <div class="menu">
-    <center>
-      <a href="1_index.html">Inicio</a>
-      <a href="2_Novedades.html">Novedades</a>
-      <a href="3_Noticias.html">Noticias</a>
-      <a href="4_Actores.html">Actores</a>
-      <a href="5_Libros.html">Libros</a>
-      <a href="6_JK_Rowling.html">J.k.Rowling</a>
-      <a href="7_Tienda.html">Tienda</a>
-      <a href="8_Parque_Tematico.html">Parque Temático</a>
-      <a href="9_Contacto.html">Contacto</a>
-      <a href="10_Otras_paginas.html">Otras</a>
-    </center>
-  </div>
-
-
 </head>
 
 <body>
 
+  <div class="banner">
+    <a href="1_index.html">
+      <img class="logo" alt="LOGO" height="150" src="iconos-header/Logo-blanco.png" />
+    </a>
+  </div>
+
+  <div class="navigation-menu">
+    <img class="logo" alt="Isologo-blanco" height="150" src="iconos-header/Isologo-blanco.png" />
+    <a href="1_index.html">Inicio</a>
+    <a href="2_Novedades.html">Novedades</a>
+    <a href="3_Noticias.html">Noticias</a>
+    <a href="4_Actores.html">Actores</a>
+    <a href="5_Libros.html">Libros</a>
+    <a href="6_JK_Rowling.html">J.k.Rowling</a>
+    <a href="7_Tienda.html">Tienda</a>
+    <a href="8_Parque_Tematico.html">Parque Temático</a>
+
+    <div class="social-links">
+      <a href="#">
+        <img alt="LOGO" class="facebook" src="iconos-redes/Facebook-01.png" />
+      </a>
+      <a href="#">
+        <img alt="LOGO" src="iconos-redes/Instagram-02.png" />
+      </a>
+      <a href="#">
+        <img alt="LOGO" src="iconos-redes/Twiter-03.png" />
+      </a>
+    </div>
+  </div>
 
   <h1>
     <b>TIENDA</b>
@@ -153,8 +156,8 @@
     <img alt="libro frente y dorso" height="172" src="7_Tienda/img/voldemor_1.jpg" />
     <img alt="libro frente y dorso" height="172" src="7_Tienda/img/voldemort.jpg" />
   </center>
+  <HR></HR>
+  <foot>El contenido fue recopilado de diferentes fuentes con el fin de compartir imagenes e información.</foot>
 </body>
-<HR></HR>
-<foot>El contenido fue recopilado de diferentes fuentes con el fin de compartir imagenes e información.</foot>
 
 </html>
