Added content wrapper to every page

--- a/3_Noticias.html
+++ b/3_Noticias.html
@@ -37,74 +37,78 @@
     </div>
   </div>
 
-  <div class="caja_tituos">
-    <h1>
-      <b>El libro Harry Potter y el niño maldito saldrá en español en octubre</b>
-    </h1>
-  </div>
-  <div class="caja_noticia">
-    <h2>
-      <em> El libro Harry Potter y el niño maldito, que contendrá el libreto de la obra de teatro Harry Potter and the Cursed
-        Child, será publicado por Editorial Salamandra en octubre de este año.</em>
-    </h2>
+  <div class="content">
 
-    <p>Basada en una idea original de J.K. Rowling, Jack Thorne y John Tiffany, y dirigida por el propio Jack Thorne, la obra
-      se representará en dos partes y se estrenará en Londres el 30 de julio en un importante teatro del West End. Al día
-      siguiente, el libro saldrá a la venta en inglés, tanto en una edición física como digital.
-      <br/>Ser Harry Potter nunca ha sido tarea fácil, menos aún desde que se ha convertido en un atareadísimo empleado del Ministerio
-      de Mágia, un hombre casado y padre de tres hijos. Y si Harry planta cara a un pasado que se resiste a quedar atrás,
-      su hijo menor, Albus Severus, ha de luchar contra el peso de una herencia familiar de la que él nunca ha querido saber
-      nada. Cuando el destino conecte el pasado con el presente, padre e hijo deberán afrontar una verdad muy incómoda: a
-      veces, la oscuridad surge de los lugares más insospechados.</p>
-    <br/>
-    <center>
-      <img alt="libro frente y dorso" height="172" src="3_Noticias/img/1_frente_y_dorso.jpg" />
-      <img alt="3 pilas de libros" height="172" src="3_Noticias/img/2_tres_libros.jpg" />
-      <img alt="niño en nido" height="172" src="3_Noticias/img/3_imagen_portada.jpg" />
-      <img alt="acomodando libros" height="172" src="3_Noticias/img/4_libro_en_mano.jpg" />
-      <img alt="tapa de libro" height="172" src="3_Noticias/img/5_Afiche_vertical.jpg" />
+    <div class="caja_tituos">
+      <h1>
+        <b>El libro Harry Potter y el niño maldito saldrá en español en octubre</b>
+      </h1>
+    </div>
+    <div class="caja_noticia">
+      <h2>
+        <em> El libro Harry Potter y el niño maldito, que contendrá el libreto de la obra de teatro Harry Potter and the Cursed
+          Child, será publicado por Editorial Salamandra en octubre de este año.</em>
+      </h2>
+
+      <p>Basada en una idea original de J.K. Rowling, Jack Thorne y John Tiffany, y dirigida por el propio Jack Thorne, la obra
+        se representará en dos partes y se estrenará en Londres el 30 de julio en un importante teatro del West End. Al día
+        siguiente, el libro saldrá a la venta en inglés, tanto en una edición física como digital.
+        <br/>Ser Harry Potter nunca ha sido tarea fácil, menos aún desde que se ha convertido en un atareadísimo empleado del
+        Ministerio de Mágia, un hombre casado y padre de tres hijos. Y si Harry planta cara a un pasado que se resiste a
+        quedar atrás, su hijo menor, Albus Severus, ha de luchar contra el peso de una herencia familiar de la que él nunca
+        ha querido saber nada. Cuando el destino conecte el pasado con el presente, padre e hijo deberán afrontar una verdad
+        muy incómoda: a veces, la oscuridad surge de los lugares más insospechados.</p>
       <br/>
-      <img alt="pilas de libros" height="200" src="3_Noticias/img/6_pilas_de_libros.jpg" />
-      <img alt="portada tipo baner del libro" height="200" src="3_Noticias/img/7_Afiche_horizontal.jpg" />
-      <img alt="libros con carlera redonda" height="200" src="3_Noticias/img/8_lanzamiento_en_promocion.jpg" />
-    </center>
-  </div>
+      <center>
+        <img alt="libro frente y dorso" height="172" src="3_Noticias/img/1_frente_y_dorso.jpg" />
+        <img alt="3 pilas de libros" height="172" src="3_Noticias/img/2_tres_libros.jpg" />
+        <img alt="niño en nido" height="172" src="3_Noticias/img/3_imagen_portada.jpg" />
+        <img alt="acomodando libros" height="172" src="3_Noticias/img/4_libro_en_mano.jpg" />
+        <img alt="tapa de libro" height="172" src="3_Noticias/img/5_Afiche_vertical.jpg" />
+        <br/>
+        <img alt="pilas de libros" height="200" src="3_Noticias/img/6_pilas_de_libros.jpg" />
+        <img alt="portada tipo baner del libro" height="200" src="3_Noticias/img/7_Afiche_horizontal.jpg" />
+        <img alt="libros con carlera redonda" height="200" src="3_Noticias/img/8_lanzamiento_en_promocion.jpg" />
+      </center>
+    </div>
 
-  <div class="caja_tituos">
-    <h1>
-      <b>El furor por Harry Potter no tiene fin</b>
-    </h1>
-  </div>
-  <div class="caja_noticia">
-    <h2>
-      <em> Salió en castellano la octava entrega de la saga; un libreto del teatro al papel.</em>
-    </h2>
+    <div class="caja_tituos">
+      <h1>
+        <b>El furor por Harry Potter no tiene fin</b>
+      </h1>
+    </div>
+    <div class="caja_noticia">
+      <h2>
+        <em> Salió en castellano la octava entrega de la saga; un libreto del teatro al papel.</em>
+      </h2>
+      <br/>
+      <center>
+        <img alt="dos fans compando el libro" height="650" src="3_Noticias/img/furor.jpg" />
+      </center>
+
+      <p>MADRID.- Los trenes mágicos no fallan. Se estima que cada 30 segundos un nuevo lector abre algún libro de Harry Potter:
+        siempre encuentra un vagón esperándolo, en el andén 9 ¾ de King"s Cross, listo para llevarlo a una aventura. En el
+        mundo real, en cambio, la puntualidad puede ser toda una magia. En 1990, J. K. Rowling viajaba desde Manchester hasta
+        la estación londinense. En lugar de algún hechizo, su ferrocarril sufrió una avería. Aunque aquel retraso sí tuvo
+        algo de encanto: la autora aprovechó para concebir la idea de un joven mago con un gran destino por delante. El increíble
+        periplo de Harry Potter también acababa de empezar. Pasaron 26 años y la saga vuela cada vez más alto. Su octavo
+        capítulo, Harry Potter y el legado maldito, se publica hoy en España y América latina (Salamandra). Los números agrandan
+        el triunfo: siete libros, con 450 millones de ejemplares vendidos; ocho películas, con 6870 millones de ingresos,
+        la mayor recaudación de la historia para una saga cinematográfica; además, parques temáticos, videojuegos y merchandising.
+        Las novelas se han traducido a unos 70 idiomas.</p>
+    </div>
+
+    <div class="caja_tituos">
+      <h1>Acá les dejamos un video de una fan cuando se enteró de la noticia del lazamiento de este fántastico libro.</h1>
+    </div>
+
     <br/>
     <center>
-      <img alt="dos fans compando el libro" height="650" src="3_Noticias/img/furor.jpg" />
+      <video alt="fanatica habando del lanzamiento de Harry Potter y el ninño maldito" src="3_Noticias/video/octavo_libro_de_harry_potter.mp4"
+        height="600" controls accesskey></video>
     </center>
 
-    <p>MADRID.- Los trenes mágicos no fallan. Se estima que cada 30 segundos un nuevo lector abre algún libro de Harry Potter:
-      siempre encuentra un vagón esperándolo, en el andén 9 ¾ de King"s Cross, listo para llevarlo a una aventura. En el
-      mundo real, en cambio, la puntualidad puede ser toda una magia. En 1990, J. K. Rowling viajaba desde Manchester hasta
-      la estación londinense. En lugar de algún hechizo, su ferrocarril sufrió una avería. Aunque aquel retraso sí tuvo algo
-      de encanto: la autora aprovechó para concebir la idea de un joven mago con un gran destino por delante. El increíble
-      periplo de Harry Potter también acababa de empezar. Pasaron 26 años y la saga vuela cada vez más alto. Su octavo capítulo,
-      Harry Potter y el legado maldito, se publica hoy en España y América latina (Salamandra). Los números agrandan el triunfo:
-      siete libros, con 450 millones de ejemplares vendidos; ocho películas, con 6870 millones de ingresos, la mayor recaudación
-      de la historia para una saga cinematográfica; además, parques temáticos, videojuegos y merchandising. Las novelas se
-      han traducido a unos 70 idiomas.</p>
   </div>
-
-  <div class="caja_tituos">
-    <h1>Acá les dejamos un video de una fan cuando se enteró de la noticia del lazamiento de este fántastico libro.</h1>
-  </div>
-
-  <br/>
-  <center>
-    <video alt="fanatica habando del lanzamiento de Harry Potter y el ninño maldito" src="3_Noticias/video/octavo_libro_de_harry_potter.mp4"
-      height="600" controls accesskey></video>
-  </center>
 
   <HR></HR>
   <foot>El contenido fue recopilado de diferentes fuentes con el fin de compartir imagenes e información.</foot>
