--- a/4_Actores.html
+++ b/4_Actores.html
@@ -40,152 +40,157 @@
     </div>
   </div>
 
-  <h1>
-    <b>Harry Potter: Daniel Radcliffe</b>
-  </h1>
-  <div class="caja_fotos">
-    <center>
-      <img alt="Daniel 3" height="172" src="4_Actores/img/Daniel_3.jpg">
-      <img alt="Daniel 2" height="172" src="4_Actores/img/Daniel__2.jpg" />
-      <img alt="Danel 1" height="172" src="4_Actores/img/Daniel_1.jpg" />
-      <img alt="Daniel 4" height="172" src="4_Actores/img/Daniel_4.jpg" />
-      <img alt="Daniel 5" height="172" src="4_Actores/img/Daniel_5.jpg" />
-      <img alt="Daniel 6" height="172" src="4_Actores/img/Daniel_6.jpg" />
-      <img alt="Daniel 7" height="172" src="4_Actores/img/Daniel_7.jpg" />
-      <img alt="Daniel 8" height="172" src="4_Actores/img/Daniel_8.jpg" />
-    </center>
-  </div>
-  <br/>
-  <h1>
-    <b>Hermione Granger: Emma Watson</b>
-  </h1>
-  <div class="caja_fotos">
-    <center>
-      <img height="172" src="4_Actores/img/Emma_5.jpg" />
-      <img height="172" src="4_Actores/img/Emma_2.jpg" />
-      <img height="172" src="4_Actores/img/Emma_3.jpg" />
-      <img height="172" src="4_Actores/img/Emma_4.jpg" />
-      <img height="172" src="4_Actores/img/Emma_1.jpg" />
-    </center>
-  </div>
-  <br/>
-  <h1>
-    <b>Ron Weasley: Grint</b>
-  </h1>
-  <div class="caja_fotos">
-    <center>
-      <img height="172" src="4_Actores/img/Ron_5.jpg" />
-      <img height="172" src="4_Actores/img/Ron_2.jpg" />
-      <img height="172" src="4_Actores/img/Ron_3.jpg" />
-      <img height="172" src="4_Actores/img/Ron_4.jpg" />
-      <img height="172" src="4_Actores/img/Ron_1.jpg" />
-    </center>
-  </div>
-  <br/>
-  <h1>
-    <b>Albus Dumbledore: Richard Harris</b>
-  </h1>
-  <div class="caja_fotos">
-    <center>
-      <img height="172" src="4_Actores/img/Albus_richard_5.jpg" />
-      <img height="172" src="4_Actores/img/Albus_richard_2.jpg" />
-      <img height="172" src="4_Actores/img/Albus_richard_3.jpg" />
-      <img height="172" src="4_Actores/img/Albus_richard_4.jpg" />
-      <img height="172" src="4_Actores/img/Albus_richard_1.jpg" />
-    </center>
-  </div>
-  <br/>
-  <h1>
-    <b>Albus Dumbledore: Michel Gambon</b>
-  </h1>
-  <div class="caja_fotos">
-    <center>
-      <img height="172" src="4_Actores/img/Albus_michael_3.jpg" />
-      <img height="172" src="4_Actores/img/Albus_michael_2.jpg" />
-      <img height="172" src="4_Actores/img/albus_michael_1.jpg" />
-      <img height="172" src="4_Actores/img/Albus_michael_4.jpg" />
-      <img height="172" src="4_Actores/img/Albus_michael_5.jpg" />
-    </center>
-  </div>
-  <br/>
-  <h1>
-    <b>Rubeus Hagrid: Robbie Coltrane</b>
-  </h1>
-  <div class="caja_fotos">
-    <center>
-      <img height="172" src="4_Actores/img/Hagrid_original_5.jpg" />
-      <img height="172" src="4_Actores/img/Hagrid_original_2.jpg" />
-      <img height="172" src="4_Actores/img/Hagrid_original_3.jpg" />
-      <img height="172" src="4_Actores/img/Hagrid_original_4.jpg" />
-      <img height="172" src="4_Actores/img/Hagrid_original_1.jpg" />
-    </center>
-  </div>
-  <br/>
-  <h1>
-    <b>Rubeus Hagrid: Martin Bayfield</b>
-  </h1>
-  <center>
-    <div class="caja_fotos">
-      <img height="172" src="4_Actores/img/Hagrid_5.jpg" />
-      <img height="172" src="4_Actores/img/Hagrid_1.jpg" />
-      <img height="172" src="4_Actores/img/Hagrid_2.jpg" />
-      <img height="172" src="4_Actores/img/Hagrid_3.jpg" />
-      <img height="172" src="4_Actores/img/Hagrid_4.jpg" />
-    </div>
-  </center>
+  <div class="content">
 
-  <br/>
-  <h1>
-    <b>Lily Potter: Geraldine Somerville</b>
-  </h1>
-  <center>
+    <h1>
+      <b>Harry Potter: Daniel Radcliffe</b>
+    </h1>
     <div class="caja_fotos">
-      <img height="172" src="4_Actores/img/Lily_5.jpg" />
-      <img height="172" src="4_Actores/img/Lily_2.jpg" />
-      <img height="172" src="4_Actores/img/Lily_3.jpg" />
-      <img height="172" src="4_Actores/img/Lily_4.jpg" />
-      <img height="172" src="4_Actores/img/Lily_1.jpg" />
+      <center>
+        <img alt="Daniel 3" height="172" src="4_Actores/img/Daniel_3.jpg">
+        <img alt="Daniel 2" height="172" src="4_Actores/img/Daniel__2.jpg" />
+        <img alt="Danel 1" height="172" src="4_Actores/img/Daniel_1.jpg" />
+        <img alt="Daniel 4" height="172" src="4_Actores/img/Daniel_4.jpg" />
+        <img alt="Daniel 5" height="172" src="4_Actores/img/Daniel_5.jpg" />
+        <img alt="Daniel 6" height="172" src="4_Actores/img/Daniel_6.jpg" />
+        <img alt="Daniel 7" height="172" src="4_Actores/img/Daniel_7.jpg" />
+        <img alt="Daniel 8" height="172" src="4_Actores/img/Daniel_8.jpg" />
+      </center>
     </div>
-  </center>
-  <br/>
-  <h1>
-    <b>Lord Voldemort: Ralph Fiennes</b>
-  </h1>
-  <center>
+    <br/>
+    <h1>
+      <b>Hermione Granger: Emma Watson</b>
+    </h1>
     <div class="caja_fotos">
-      <img height="172" src="4_Actores/img/Voldemort_5.jpg" />
-      <img height="172" src="4_Actores/img/Voldemort_2.jpg" />
-      <img height="172" src="4_Actores/img/Voldemort_3.jpg" />
-      <img height="172" src="4_Actores/img/Voldemort_4.jpg" />
-      <img height="172" src="4_Actores/img/Voldemort_1.jpg" />
+      <center>
+        <img height="172" src="4_Actores/img/Emma_5.jpg" />
+        <img height="172" src="4_Actores/img/Emma_2.jpg" />
+        <img height="172" src="4_Actores/img/Emma_3.jpg" />
+        <img height="172" src="4_Actores/img/Emma_4.jpg" />
+        <img height="172" src="4_Actores/img/Emma_1.jpg" />
+      </center>
     </div>
-  </center>
-  <br/>
-  <h1>
-    <b>Ginny Weasley: Bonnie Wright</b>
-  </h1>
-  <center>
+    <br/>
+    <h1>
+      <b>Ron Weasley: Grint</b>
+    </h1>
     <div class="caja_fotos">
-      <img height="172" src="4_Actores/img/Ginny_5.jpg" />
-      <img height="172" src="4_Actores/img/Ginny_4.jpg" />
-      <img height="172" src="4_Actores/img/Ginny_3.jpg" />
-      <img height="172" src="4_Actores/img/Ginny_2.jpg" />
-      <img height="172" src="4_Actores/img/Ginny_1.jpg" />
+      <center>
+        <img height="172" src="4_Actores/img/Ron_5.jpg" />
+        <img height="172" src="4_Actores/img/Ron_2.jpg" />
+        <img height="172" src="4_Actores/img/Ron_3.jpg" />
+        <img height="172" src="4_Actores/img/Ron_4.jpg" />
+        <img height="172" src="4_Actores/img/Ron_1.jpg" />
+      </center>
     </div>
-  </center>
-  <br/>
-  <h1>
-    <b>Draco Malfoy: Tom Felton</b>
-  </h1>
-  <center>
+    <br/>
+    <h1>
+      <b>Albus Dumbledore: Richard Harris</b>
+    </h1>
     <div class="caja_fotos">
-      <img height="172" src="4_Actores/img/Draco_5.jpg" />
-      <img height="172" src="4_Actores/img/Draco_3.jpg" />
-      <img height="172" src="4_Actores/img/Draco_2.jpg" />
-      <img height="172" src="4_Actores/img/Daniel_4.jpg" />
-      <img height="172" src="4_Actores/img/Draco_1.jpg" />
+      <center>
+        <img height="172" src="4_Actores/img/Albus_richard_5.jpg" />
+        <img height="172" src="4_Actores/img/Albus_richard_2.jpg" />
+        <img height="172" src="4_Actores/img/Albus_richard_3.jpg" />
+        <img height="172" src="4_Actores/img/Albus_richard_4.jpg" />
+        <img height="172" src="4_Actores/img/Albus_richard_1.jpg" />
+      </center>
     </div>
-  </center>
+    <br/>
+    <h1>
+      <b>Albus Dumbledore: Michel Gambon</b>
+    </h1>
+    <div class="caja_fotos">
+      <center>
+        <img height="172" src="4_Actores/img/Albus_michael_3.jpg" />
+        <img height="172" src="4_Actores/img/Albus_michael_2.jpg" />
+        <img height="172" src="4_Actores/img/albus_michael_1.jpg" />
+        <img height="172" src="4_Actores/img/Albus_michael_4.jpg" />
+        <img height="172" src="4_Actores/img/Albus_michael_5.jpg" />
+      </center>
+    </div>
+    <br/>
+    <h1>
+      <b>Rubeus Hagrid: Robbie Coltrane</b>
+    </h1>
+    <div class="caja_fotos">
+      <center>
+        <img height="172" src="4_Actores/img/Hagrid_original_5.jpg" />
+        <img height="172" src="4_Actores/img/Hagrid_original_2.jpg" />
+        <img height="172" src="4_Actores/img/Hagrid_original_3.jpg" />
+        <img height="172" src="4_Actores/img/Hagrid_original_4.jpg" />
+        <img height="172" src="4_Actores/img/Hagrid_original_1.jpg" />
+      </center>
+    </div>
+    <br/>
+    <h1>
+      <b>Rubeus Hagrid: Martin Bayfield</b>
+    </h1>
+    <center>
+      <div class="caja_fotos">
+        <img height="172" src="4_Actores/img/Hagrid_5.jpg" />
+        <img height="172" src="4_Actores/img/Hagrid_1.jpg" />
+        <img height="172" src="4_Actores/img/Hagrid_2.jpg" />
+        <img height="172" src="4_Actores/img/Hagrid_3.jpg" />
+        <img height="172" src="4_Actores/img/Hagrid_4.jpg" />
+      </div>
+    </center>
+
+    <br/>
+    <h1>
+      <b>Lily Potter: Geraldine Somerville</b>
+    </h1>
+    <center>
+      <div class="caja_fotos">
+        <img height="172" src="4_Actores/img/Lily_5.jpg" />
+        <img height="172" src="4_Actores/img/Lily_2.jpg" />
+        <img height="172" src="4_Actores/img/Lily_3.jpg" />
+        <img height="172" src="4_Actores/img/Lily_4.jpg" />
+        <img height="172" src="4_Actores/img/Lily_1.jpg" />
+      </div>
+    </center>
+    <br/>
+    <h1>
+      <b>Lord Voldemort: Ralph Fiennes</b>
+    </h1>
+    <center>
+      <div class="caja_fotos">
+        <img height="172" src="4_Actores/img/Voldemort_5.jpg" />
+        <img height="172" src="4_Actores/img/Voldemort_2.jpg" />
+        <img height="172" src="4_Actores/img/Voldemort_3.jpg" />
+        <img height="172" src="4_Actores/img/Voldemort_4.jpg" />
+        <img height="172" src="4_Actores/img/Voldemort_1.jpg" />
+      </div>
+    </center>
+    <br/>
+    <h1>
+      <b>Ginny Weasley: Bonnie Wright</b>
+    </h1>
+    <center>
+      <div class="caja_fotos">
+        <img height="172" src="4_Actores/img/Ginny_5.jpg" />
+        <img height="172" src="4_Actores/img/Ginny_4.jpg" />
+        <img height="172" src="4_Actores/img/Ginny_3.jpg" />
+        <img height="172" src="4_Actores/img/Ginny_2.jpg" />
+        <img height="172" src="4_Actores/img/Ginny_1.jpg" />
+      </div>
+    </center>
+    <br/>
+    <h1>
+      <b>Draco Malfoy: Tom Felton</b>
+    </h1>
+    <center>
+      <div class="caja_fotos">
+        <img height="172" src="4_Actores/img/Draco_5.jpg" />
+        <img height="172" src="4_Actores/img/Draco_3.jpg" />
+        <img height="172" src="4_Actores/img/Draco_2.jpg" />
+        <img height="172" src="4_Actores/img/Daniel_4.jpg" />
+        <img height="172" src="4_Actores/img/Draco_1.jpg" />
+      </div>
+    </center>
+
+  </div>
+
   <HR></HR>
   <foot>El contenido fue recopilado de diferentes fuentes con el fin de compartir imagenes e información.</foot>
 </body>
