--- a/8_Parque_Tematico.html
+++ b/8_Parque_Tematico.html
@@ -38,33 +38,36 @@
     </div>
   </div>
 
-  <h1>
-    <b>PARQUE TEMÁTICO</b>
-  </h1>
-  <h2>
-    <em>Les dejamos algunas imágenes del Parque Temático de Londres para que vean</em>
-  </h2>
+  <div class="content">
+    <h1>
+      <b>PARQUE TEMÁTICO</b>
+    </h1>
+    <h2>
+      <em>Les dejamos algunas imágenes del Parque Temático de Londres para que vean</em>
+    </h2>
 
-  <img alt="AUTO VOLADOR" height="172" src="8_Parque_Tematico/img/auto_volador.jpg" />
-  <img alt="AUTOBUS NOCTAMBULO" height="172" src="8_Parque_Tematico/img/autobus_noctambulo.jpg" />
-  <img alt="CABAÑA HAGRID" height="172" src="8_Parque_Tematico/img/cabana_hagrid.jpg" />
-  <img alt="CERVEZA DE MANTEQUILLA" height="172" src="8_Parque_Tematico/img/cerveza_de_mantequilla.jpg" />
-  <img alt="DRAGÓN SOBRE BANCO GRYNGOTS" height="172" src="8_Parque_Tematico/img/Dragon_sobre_castillo.jpg" />
-  <img alt="DRAGONES PELEANDO" height="172" src="8_Parque_Tematico/img/dragones_peleando.jpg" />
-  <img alt="DULCERIA" height="172" src="8_Parque_Tematico/img/dulceria.jpg" />
-  <img alt="GRAN COMEDOR" height="172" src="8_Parque_Tematico/img/gran_comedor.jpg" />
-  <img alt="BANCO GRYNGOTS" height="172" src="8_Parque_Tematico/img/gringotts.jpg" />
-  <img alt="CALLE HOGSMEADE Y HOGWARTS" height="172" src="8_Parque_Tematico/img/hogsmeade_hogwarts.jpg" />
-  <img alt="HOGWARTS EXPRESS" height="172" src="8_Parque_Tematico/img/hogwats_express.jpg" />
-  <img alt="HOSDMEADE" height="172" src="8_Parque_Tematico/img/hosdmeade.jpg" />
-  <img alt="MONTAÑA RUSA" height="172" src="8_Parque_Tematico/img/montana_rusa.jpg" />
-  <img alt="CALLEJÓN DIAGON" height="172" src="8_Parque_Tematico/img/negocios_callejon_diagon.jpg" />
-  <img alt="OLLIVANDERS" height="172" src="8_Parque_Tematico/img/ollivanders.jpg" />
-  <img alt="VISTA PARQUE TEMÁTICO" height="172" src="8_Parque_Tematico/img/parque_tematico.jpg" />
-  <img alt="RECUERDO DE SNITCH" height="172" src="8_Parque_Tematico/img/recuerdo_del_parque_snitv%C2%A1ch.jpg" />
-  <img alt="REPLICA HOGWARTS" height="172" src="8_Parque_Tematico/img/replica_hogwarts.jpg" />
-  <img alt="HOGWARTS ILUMINADO" height="172" src="8_Parque_Tematico/img/replica_hogwarts_iluminada.jpg" />
-  <img alt="TERMINAL DEL EXPRESO HOGWARTS" height="172" src="8_Parque_Tematico/img/treminal_expreso_hogwarts.jpg" />
+    <img alt="AUTO VOLADOR" height="172" src="8_Parque_Tematico/img/auto_volador.jpg" />
+    <img alt="AUTOBUS NOCTAMBULO" height="172" src="8_Parque_Tematico/img/autobus_noctambulo.jpg" />
+    <img alt="CABAÑA HAGRID" height="172" src="8_Parque_Tematico/img/cabana_hagrid.jpg" />
+    <img alt="CERVEZA DE MANTEQUILLA" height="172" src="8_Parque_Tematico/img/cerveza_de_mantequilla.jpg" />
+    <img alt="DRAGÓN SOBRE BANCO GRYNGOTS" height="172" src="8_Parque_Tematico/img/Dragon_sobre_castillo.jpg" />
+    <img alt="DRAGONES PELEANDO" height="172" src="8_Parque_Tematico/img/dragones_peleando.jpg" />
+    <img alt="DULCERIA" height="172" src="8_Parque_Tematico/img/dulceria.jpg" />
+    <img alt="GRAN COMEDOR" height="172" src="8_Parque_Tematico/img/gran_comedor.jpg" />
+    <img alt="BANCO GRYNGOTS" height="172" src="8_Parque_Tematico/img/gringotts.jpg" />
+    <img alt="CALLE HOGSMEADE Y HOGWARTS" height="172" src="8_Parque_Tematico/img/hogsmeade_hogwarts.jpg" />
+    <img alt="HOGWARTS EXPRESS" height="172" src="8_Parque_Tematico/img/hogwats_express.jpg" />
+    <img alt="HOSDMEADE" height="172" src="8_Parque_Tematico/img/hosdmeade.jpg" />
+    <img alt="MONTAÑA RUSA" height="172" src="8_Parque_Tematico/img/montana_rusa.jpg" />
+    <img alt="CALLEJÓN DIAGON" height="172" src="8_Parque_Tematico/img/negocios_callejon_diagon.jpg" />
+    <img alt="OLLIVANDERS" height="172" src="8_Parque_Tematico/img/ollivanders.jpg" />
+    <img alt="VISTA PARQUE TEMÁTICO" height="172" src="8_Parque_Tematico/img/parque_tematico.jpg" />
+    <img alt="RECUERDO DE SNITCH" height="172" src="8_Parque_Tematico/img/recuerdo_del_parque_snitv%C2%A1ch.jpg" />
+    <img alt="REPLICA HOGWARTS" height="172" src="8_Parque_Tematico/img/replica_hogwarts.jpg" />
+    <img alt="HOGWARTS ILUMINADO" height="172" src="8_Parque_Tematico/img/replica_hogwarts_iluminada.jpg" />
+    <img alt="TERMINAL DEL EXPRESO HOGWARTS" height="172" src="8_Parque_Tematico/img/treminal_expreso_hogwarts.jpg" />
+
+  </div>
 
   <HR></HR>
   <foot>El contenido fue recopilado de diferentes fuentes con el fin de compartir imagenes e información.</foot>
