Added sticky header to all pages. Minor fixes

--- a/1_index.html
+++ b/1_index.html
@@ -51,9 +51,9 @@
     <div class="texto_index">
       <center>
         <p>
-          Si sos fanático de esta mágica saga, te gustará mucho este sitio. Te contaremos detalles y secretos de esta grán
-          producción, las últimas noticias y novedades. Aquí podrás compartir información o lo que deses con nosotros y los
-          demás fans como vos.
+          Si sos fanático de esta mágica saga, te gustará mucho este sitio. Te contaremos detalles y secretos de esta grán producción,
+          las últimas noticias y novedades. Aquí podrás compartir información o lo que deses con nosotros y los demás fans
+          como vos.
         </p>
       </center>
     </div>
