--- a/6_JK_Rowling.html
+++ b/6_JK_Rowling.html
@@ -193,6 +193,7 @@
   <HR></HR>
   <foot>El contenido fue recopilado de diferentes fuentes con el fin de compartir imagenes e información.</foot>
 
+  <script src="sticky-header.js"></script>
 </body>
 
 </html>
