--- a/3_Noticias.html
+++ b/3_Noticias.html
@@ -2,6 +2,7 @@
 
 <head>
   <link rel="stylesheet" href="estilo.css">
+  <link rel="stylesheet" href="3_Noticias.css">
   <meta charset="utf-8">
   <title>Fan Potter</title>
 </head>
@@ -113,6 +114,7 @@
   <HR></HR>
   <foot>El contenido fue recopilado de diferentes fuentes con el fin de compartir imagenes e información.</foot>
 
+  <script src="sticky-header.js"></script>
 </body>
 
 </html>
