--- a/4_Actores.html
+++ b/4_Actores.html
@@ -102,9 +102,9 @@
     </h1>
     <div class="caja_fotos">
       <center>
-        <img height="172" src="4_Actores/img/Albus_michael_3.jpg" />
+        <img height="172" src="4_Actores/img/albus_michael_3.jpg" />
         <img height="172" src="4_Actores/img/Albus_michael_2.jpg" />
-        <img height="172" src="4_Actores/img/albus_michael_1.jpg" />
+        <img height="172" src="4_Actores/img/Albus_michael_1.jpg" />
         <img height="172" src="4_Actores/img/Albus_michael_4.jpg" />
         <img height="172" src="4_Actores/img/Albus_michael_5.jpg" />
       </center>
@@ -193,6 +193,8 @@
 
   <HR></HR>
   <foot>El contenido fue recopilado de diferentes fuentes con el fin de compartir imagenes e información.</foot>
+
+  <script src="sticky-header.js"></script>
 </body>
 
 </html>
