--- a/7_Tienda.html
+++ b/7_Tienda.html
@@ -2,6 +2,7 @@
 
 <head>
   <link rel="stylesheet" href="estilo.css">
+  <link rel="stylesheet" href="7_Tienda.css">
   <meta charset="utf-8">
   <title>Fan Potter</title>
 </head>
@@ -163,6 +164,8 @@
 
   <HR></HR>
   <foot>El contenido fue recopilado de diferentes fuentes con el fin de compartir imagenes e información.</foot>
+
+  <script src="sticky-header.js"></script>
 </body>
 
 </html>
