renamed 1_Index to index

--- a/4_Actores.html
+++ b/4_Actores.html
@@ -11,14 +11,14 @@
 
 
   <div class="banner">
-    <a href="1_index.html">
+    <a href="index.html">
       <img class="logo" alt="LOGO" height="150" src="iconos-header/Logo-blanco.png" />
     </a>
   </div>
 
   <div class="navigation-menu">
     <img class="logo" alt="Isologo-blanco" height="150" src="iconos-header/Isologo-blanco.png" />
-    <a href="1_index.html">Inicio</a>
+    <a href="index.html">Inicio</a>
     <a href="2_Novedades.html">Novedades</a>
     <a href="3_Noticias.html">Noticias</a>
     <a href="4_Actores.html">Actores</a>
