--- a/index.html
+++ b/index.html
@@ -2,21 +2,21 @@
 
 <head>
   <link rel="stylesheet" href="estilo.css">
-  <link rel="stylesheet" href="1_Index.css">
+  <link rel="stylesheet" href="index.css">
   <meta charset="utf-8">
   <title>Fan Potter</title>
 </head>
 
 <body>
   <div class="banner">
-    <a href="1_index.html">
+    <a href="index.html">
       <img class="logo" alt="LOGO" height="150" src="iconos-header/Logo-blanco.png" />
     </a>
   </div>
 
   <div class="navigation-menu">
     <img class="logo" alt="Isologo-blanco" height="150" src="iconos-header/Isologo-blanco.png" />
-    <a href="1_index.html">Inicio</a>
+    <a href="index.html">Inicio</a>
     <a href="2_Novedades.html">Novedades</a>
     <a href="3_Noticias.html">Noticias</a>
     <a href="4_Actores.html">Actores</a>
@@ -61,7 +61,7 @@
 
     <center>
       <div class="caj_foto_inicio">
-        <img alt="Harry atrapamdo cartas" class="harry-image" src="1_Index_Inicio/img/harry_con_cartas.gif">
+        <img alt="Harry atrapamdo cartas" class="harry-image" src="index_Inicio/img/harry_con_cartas.gif">
       </div>
     </center>
   </div>
